@@ -14,11 +14,13 @@
         <module>server</module>
         <module>vaadin-ui</module>
         <module>test</module>
+        <module>distribution</module>
     </modules>
 
     <properties>
         <java.version>25</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jpackage.skip>true</jpackage.skip>
         <grpc.version>1.74.0</grpc.version>
         <protobuf-java.version>4.31.1</protobuf-java.version>
         <spring-boot.version>3.5.6</spring-boot.version>
@@ -98,6 +100,16 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>3.6.3</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -197,6 +209,114 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>dist</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <artifactId>maven-antrun-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>run</goal>
+                                    </goals>
+                                    <configuration>
+                                        <target>
+                                            <mkdir dir="${project.build.directory}/dist-input"/>
+                                            <copy file="${project.build.directory}/${project.build.finalName}.jar"
+                                                  todir="${project.build.directory}/dist-input"
+                                                  failonerror="false" />
+                                        </target>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>exec-maven-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <id>jpackage</id>
+                                    <phase>install</phase>
+                                    <goals>
+                                        <goal>exec</goal>
+                                    </goals>
+                                    <configuration>
+                                        <skip>${jpackage.skip}</skip>
+                                        <executable>jpackage</executable>
+                                        <arguments>
+                                            <argument>--name</argument>
+                                            <argument>${artifactId}</argument>
+                                            <argument>--java-options</argument>
+                                            <argument>-Djdk.lang.Process.launchMechanism=FORK</argument>
+                                            <argument>--input</argument>
+                                            <argument>${project.build.directory}/dist-input</argument>
+                                            <argument>--main-jar</argument>
+                                            <argument>${project.build.finalName}.jar</argument>
+                                            <argument>--main-class</argument>
+                                            <argument>org.springframework.boot.loader.launch.JarLauncher</argument>
+                                            <argument>--type</argument>
+                                            <argument>app-image</argument>
+                                            <argument>--dest</argument>
+                                            <argument>${project.build.directory}/dist</argument><argument>--runtime-image</argument>
+                                            <argument>${maven.multiModuleProjectDirectory}/shared-runtime</argument>
+                                        </arguments>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-clean-plugin</artifactId>
+                        <configuration>
+                            <filesets>
+                                <fileset>
+                                    <directory>${project.basedir}/shared-runtime</directory>
+                                </fileset>
+                            </filesets>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>create-runtime</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <inherited>false</inherited>
+                                <configuration>
+                                    <executable>jlink</executable>
+                                    <arguments>
+                                        <argument>--add-modules</argument>
+                                        <argument>java.base,java.logging,java.desktop,java.management,java.naming,java.security.jgss,java.instrument,java.sql,java.xml,jdk.unsupported,java.net.http,jdk.zipfs</argument>
+                                        <argument>--strip-debug</argument>
+                                        <argument>--no-man-pages</argument>
+                                        <argument>--no-header-files</argument>
+                                        <argument>--compress</argument>
+                                        <argument>zip-9</argument>
+                                        <argument>--output</argument>
+                                        <argument>${project.basedir}/shared-runtime</argument>
+                                    </arguments>
+                                    <successCodes>
+                                        <successCode>0</successCode>
+                                    </successCodes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <developers>
         <developer>
